--- a/pages/home/styles.module.scss
+++ b/pages/home/styles.module.scss
@@ -1,20 +1,16 @@
 @import "../../styles/media.scss";
 
-.principal {
-  width: 100%;
-  flex-direction: column;
-  // min-height: 500px;
-}
 .slider {
   width: 100%;
   height: 21rem;
-  background-image: url("../../images/banner.jpg");
+  background-image: url("/images/banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .lineCard {
   width: 100%;
   height: 18rem;
